--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,8 @@ permalink:        pretty
 title:            cellier
 tagline:          ''
 description:      '『he looks like a dog so』 『because he is a PM』'
-url:              http://cellier.me
+url:              https://harkas.github.io/Demoblog
+
 
 author:
   name:           'cellier'
